--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "nestjs_starter_app",
+  "name": "nest-app",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/src/main",
+    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,55 +20,52 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/event-emitter": "^2.0.3",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.2",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^7.1.16",
-    "@types/multer": "^1.4.11",
-    "aws-sdk": "^2.1508.0",
-    "axios": "^1.7.2",
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^5.3.1",
     "device-detector-js": "^3.0.3",
     "install": "^0.13.0",
-    "joi": "^17.11.0",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
-    "mongoose": "^8.0.2",
-    "nest-aws-sdk": "^3.0.1",
-    "reflect-metadata": "^0.1.13",
+    "mongoose": "^8.3.3",
+    "reflect-metadata": "^0.2.0",
     "request-ip": "^3.3.0",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "sharp": "0.32.6",
-    "xlsx": "^0.18.5"
+    "rxjs": "^7.8.1",
+    "session": "^0.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "@nestjs/cli": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/schematics": "^10.0.0",
+    "@nestjs/swagger": "^7.1.16",
+    "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^20.3.1",
+    "@types/request-ip": "^0.0.41",
+    "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "prettier": "^3.0.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
