--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
 # PORT CREDENTIAL
 PORT=
 
-# AWS CREDENTIALS
-APP_AWS_ACCESS_KEY_ID=
-APP_AWS_REGION=
-APP_AWS_SECRET_ACCESS_KEY=
+# Jwt CREDENTIALS
 TOKEN_EXPIRATION_TIME=
 TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
